--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "0.37.4",
+    "@auth/prisma-adapter": "2.7.4",
     "@heroui/button": "2.2.13",
     "@heroui/code": "2.2.10",
     "@heroui/input": "2.4.13",
@@ -23,7 +25,7 @@
     "@prisma/client": "6.4.1",
     "framer-motion": "12.4.7",
     "next": "15.1.7",
-    "next-auth": "4.24.11",
+    "next-auth": "5.0.0-beta.25",
     "prisma": "6.4.1",
     "react": "19.0.0",
     "react-dom": "19.0.0"
