--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/core": "0.37.4",
     "@auth/prisma-adapter": "2.7.4",
+    "@heroui/avatar": "2.2.10",
     "@heroui/button": "2.2.13",
     "@heroui/code": "2.2.10",
     "@heroui/input": "2.4.13",
@@ -18,6 +19,7 @@
     "@heroui/link": "2.2.11",
     "@heroui/listbox": "2.3.13",
     "@heroui/navbar": "2.2.12",
+    "@heroui/popover": "2.3.13",
     "@heroui/snippet": "2.2.14",
     "@heroui/switch": "2.2.12",
     "@heroui/system": "2.4.10",
