--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@heroui/theme": "2.4.9",
     "@prisma/client": "6.4.1",
     "framer-motion": "12.4.7",
-    "next": "15.1.7",
+    "next": "15.2.0",
     "next-auth": "5.0.0-beta.25",
     "prisma": "6.4.1",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "zod": "3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.0",
