--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@auth/prisma-adapter": "2.7.4",
     "@heroui/avatar": "2.2.10",
     "@heroui/button": "2.2.13",
+    "@heroui/chip": "2.2.11",
     "@heroui/code": "2.2.10",
+    "@heroui/divider": "2.2.10",
     "@heroui/input": "2.4.13",
     "@heroui/kbd": "2.2.10",
     "@heroui/link": "2.2.11",
