updated packages including new ones for eslint

--- a/package.json
+++ b/package.json
@@ -9,53 +9,56 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "0.37.4",
-    "@auth/prisma-adapter": "2.7.4",
-    "@heroui/avatar": "2.2.10",
-    "@heroui/button": "2.2.13",
-    "@heroui/chip": "2.2.11",
-    "@heroui/code": "2.2.10",
-    "@heroui/divider": "2.2.10",
-    "@heroui/input": "2.4.13",
-    "@heroui/kbd": "2.2.10",
-    "@heroui/link": "2.2.11",
-    "@heroui/listbox": "2.3.13",
-    "@heroui/navbar": "2.2.12",
-    "@heroui/popover": "2.3.13",
-    "@heroui/snippet": "2.2.14",
-    "@heroui/switch": "2.2.12",
-    "@heroui/system": "2.4.10",
-    "@heroui/theme": "2.4.9",
-    "@prisma/client": "6.4.1",
-    "framer-motion": "12.4.7",
-    "next": "15.2.0",
+    "@auth/core": "0.38.0",
+    "@auth/prisma-adapter": "2.8.0",
+    "@heroui/avatar": "2.2.12",
+    "@heroui/button": "2.2.16",
+    "@heroui/chip": "2.2.12",
+    "@heroui/code": "2.2.12",
+    "@heroui/divider": "2.2.11",
+    "@heroui/input": "2.4.16",
+    "@heroui/kbd": "2.2.12",
+    "@heroui/link": "2.2.13",
+    "@heroui/listbox": "2.3.15",
+    "@heroui/navbar": "2.2.14",
+    "@heroui/popover": "2.3.16",
+    "@heroui/snippet": "2.2.17",
+    "@heroui/switch": "2.2.14",
+    "@heroui/system": "2.4.12",
+    "@heroui/theme": "2.4.12",
+    "@prisma/client": "6.5.0",
+    "framer-motion": "12.5.0",
+    "next": "15.2.2",
     "next-auth": "5.0.0-beta.25",
-    "prisma": "6.4.1",
+    "prisma": "6.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "zod": "3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.0",
-    "@eslint/js": "9.21.0",
-    "@next/eslint-plugin-next": "15.1.7",
+    "@eslint/js": "9.22.0",
+    "@next/eslint-plugin-next": "15.2.2",
     "@types/eslint": "9.6.1",
-    "@types/node": "22.13.5",
+    "@types/node": "22.13.10",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@typescript-eslint/eslint-plugin": "8.24.1",
-    "@typescript-eslint/parser": "8.24.1",
-    "autoprefixer": "10.4.20",
-    "eslint": "9.21.0",
-    "eslint-config-next": "15.1.7",
-    "eslint-config-prettier": "10.0.1",
+    "@typescript-eslint/parser": "8.26.1",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.22.0",
+    "eslint-config-next": "15.2.2",
+    "eslint-config-prettier": "10.1.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-prettier": "5.2.3",
-    "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-tailwindcss": "3.18.0",
     "postcss": "8.5.3",
-    "prettier": "3.5.2",
+    "prettier": "3.5.3",
     "tailwindcss": "3.4.1",
-    "typescript": "5.7.3"
+    "typescript": "5.8.2",
+    "typescript-eslint": "8.26.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
