--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroui/listbox": "2.3.15",
     "@heroui/navbar": "2.2.14",
     "@heroui/popover": "2.3.16",
+    "@heroui/skeleton": "2.2.10",
     "@heroui/snippet": "2.2.17",
     "@heroui/switch": "2.2.14",
     "@heroui/system": "2.4.12",
